--- a/etc/environment.yml
+++ b/etc/environment.yml
@@ -3,8 +3,8 @@ channels:
   - conda-forge
 dependencies:  
   - pyshp
-  - numpy 
-  - pandas 
+  - numpy=1.19.2
+  - pandas=1.1.3
   - nose-timer
   - nbsphinx
   - matplotlib
